Default display font names are not localized if gfx.e10s.font-list.shared=true
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox83 | --- | fixed |
People
(Reporter: alice0775, Assigned: jfkthame)
References
Details
Attachments
(2 files)
Environment: Windows10 Japanese version
Bug 1648474 does not fix display name of default font.
Steps to reproduce:
- Set gfx.e10s.font-list.shared to true
- about:preferences > Fonts and Colors
- Advanced > Select font for "Japanese"
Actual Results:
既定(Yu Mincho),(Meiryo),(MS Gothic) in ja build
Default(Yu Mincho),(Meiryo),(MS Gothic) in en-US build
Expected Results;
既定(游明朝),(メイリオ),(MS ゴシック) in ja build
Default(游明朝),(メイリオ),(MS ゴシック)in en-US build
Comment 1•4 years ago
|
||
Jonathan, am I right in thinking this is your area?
Assignee | ||
Comment 2•4 years ago
|
||
Hmm, I suspect this may (in the new font-list world) be dependent on which names are used in all.js, which has always used the English rather than Japanese-localized names. Need to think about how we should handle that...
Updated•4 years ago
|
Assignee | ||
Comment 3•4 years ago
|
||
Updated•4 years ago
|
Assignee | ||
Comment 4•4 years ago
|
||
There's a try build at https://treeherder.mozilla.org/#/jobs?repo=try&revision=62b0a5702a12540273a3ab521e3234f8613085fe&selectedTaskRun=WjYTumtDQauDZdEeXWXVbQ.0 with this patch; Alice0775, could you confirm this shows the localized font names as you would expect on your system? Thanks!
Reporter | ||
Comment 5•4 years ago
|
||
(In reply to Jonathan Kew (:jfkthame) from comment #4)
There's a try build at https://treeherder.mozilla.org/#/jobs?repo=try&revision=62b0a5702a12540273a3ab521e3234f8613085fe&selectedTaskRun=WjYTumtDQauDZdEeXWXVbQ.0 with this patch; Alice0775, could you confirm this shows the localized font names as you would expect on your system? Thanks!
Yes, the try-build works as expected. The issue is no longer reproduced.
Comment 7•4 years ago
|
||
bugherder |
Description
•