Bug 1661247 - Implement a LocalizedFamilyName method in the shared font-list, to enable proper localized font name display in the Preferences dialog on Windows. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D91564