gfx/thebes/SharedFontList.h
@@ -198,11 +198,13 @@ struct Face {
  * want to use the family.
  */
 struct Family {
+  static constexpr uint32_t kNoIndex = uint32_t(-1);
+
   // Data required to initialize a Family
   struct InitData {
-    InitData(const nsACString& aKey,   // lookup key (lowercased)
-             const nsACString& aName,  // display name
-             uint32_t aIndex = 0,  // [win] index in the system font collection
+    InitData(const nsACString& aKey,      // lookup key (lowercased)
+             const nsACString& aName,     // display name
+             uint32_t aIndex = kNoIndex,  // [win] system collection index
              FontVisibility aVisibility = FontVisibility::Unknown,
              bool aBundled = false,       // [win] font was bundled with the app
                                           // rather than system-installed
@@ -262,8 +264,8 @@ struct Family {
 
   const String& DisplayName() const { return mName; }
 
-  uint32_t Index() const { return mIndex & 0x7fffffffu; }
-  bool IsBundled() const { return mIndex & 0x80000000u; }
+  uint32_t Index() const { return mIndex; }
+  bool IsBundled() const { return mIsBundled; }
 
   uint32_t NumFaces() const {
     MOZ_ASSERT(IsInitialized());
@@ -310,6 +312,7 @@ struct Family {
   FontVisibility mVisibility;
   bool mIsSimple;  // family allows simplified style matching: mFaces contains
                    // exactly 4 entries [Regular, Bold, Italic, BoldItalic].
+  bool mIsBundled : 1;
   bool mIsBadUnderlineFamily : 1;
   bool mIsForceClassic : 1;
   bool mIsAltLocale : 1;
